enso: add *early* support for dream2
Changes so far:
 - Add busybox bins
 - Add initial dream2 G955FXXS5DSH8 files (HWC fix so far)
 - Add initial script shit

Idea is to collect device-related files/patches inside /system/enso folder. The fixes will then be packed
with .tar.xz format to save space and extracted/applied to /system via the enso.sh script.

!IMPORTANT!
In order to be executed, SELinux Context for enso.sh file must be u:object_r:install_recovery_exec:s0 (hax but works)

Signed-off-by: BlackMesa123 <brother12@hotmail.it>

--- a/script/etc/init/enso.rc
+++ b/script/etc/init/enso.rc
@@ -1,5 +1,5 @@
 #
-# OnTheOne ens≈ç
+# OnTheOne ens®≠
 # Coded by BlackMesa123 @2019
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
