enso: script: add minify+slight obfuscation to boot script
Signed-off-by: BlackMesa123 <brother12@hotmail.it>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "bashfuscator"]
-	path = bashfuscator
-	url = https://gitlab.com/ontheonesrc/Bashfuscator.git
+[submodule "bash_minifier"]
+	path = bash_minifier
+	url = https://gitlab.com/ontheonesrc/bash_minifier.git
